gitops/infrastructure/networking/external-docker-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockge-service
  namespace: docker
spec:
  ports:
    - port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dockge-service
  namespace: docker
subsets:
  - addresses:
      - ip: 100.110.252.128
    ports:
      - port: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  namespace: docker
spec:
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer-service
  namespace: docker
subsets:
  - addresses:
      - ip: 100.110.252.128
    ports:
      - port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: docker
spec:
  ports:
    - port: 80
      targetPort: 8701
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qbittorrent-service
  namespace: docker
subsets:
  - addresses:
      - ip: 100.110.252.128
    ports:
      - port: 8701
