gitops/infrastructure/networking/routes-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: local-cluster-gateway
    namespace: kube-system
  hostnames: ["argocd.home"]
  rules:
  - matches: [{ path: { type: PathPrefix, value: / } }]
    backendRefs: [{ name: argocd-server, port: 80 }]
