gitops/infrastructure/networking/routes-dev.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "minio-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: minio, port: 9001 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "pgadmin-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: pgadmin, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "wallabag-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: wallabag, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "n8n-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: n8n, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "authentik-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: authentik, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodered-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "nodered-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: nodered, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docmost-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "docmost-dev.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: docmost, port: 80 } ]
