gitops/infrastructure/networking/routes-docker.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockge-route
  namespace: docker
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "dockge.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: dockge-service, port: 5001 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-route
  namespace: docker
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "portainer.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: portainer-service, port: 9000 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: docker
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: infrastructure
  hostnames: [ "qbittorrent.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: qbittorrent-service, port: 80 } ]
