gitops/infrastructure/networking/routes-monitoring.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: local-cluster-gateway
    namespace: kube-system
  hostnames: ["grafana.home"]
  rules:
  - matches: [{ path: { type: PathPrefix, value: / } }]
    backendRefs: [{ name: grafana, port: 3000 }]
