gitops/infrastructure/networking/routes-production.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-prod-route
  namespace: production
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: kube-system
  hostnames: [ "minio.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: minio, port: 9001 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-prod-route
  namespace: production
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: kube-system
  hostnames: [ "pgadmin.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: pgadmin, port: 80 } ]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag-prod-route
  namespace: production
spec:
  parentRefs:
    - name: local-cluster-gateway
      namespace: kube-system
  hostnames: [ "wallabag.home" ]
  rules:
    - matches: [ { path: { type: PathPrefix, value: / } } ]
      backendRefs: [ { name: wallabag, port: 80 } ]
