gitops/infrastructure/networking/vault-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-external
  namespace: infrastructure
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: infrastructure-vault-backend@kubernetescrd
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8200
      targetPort: 8200
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: vault-external
  namespace: infrastructure
  labels:
    kubernetes.io/service-name: vault-external
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8200
endpoints:
  - addresses:
      - 100.96.242.26
    conditions:
      ready: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-external
  namespace: infrastructure
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: vault.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-external
                port:
                  number: 8200
